add read from config for add_entries

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [User]
 dump_path = /home/labbrat/dumps
+sample_entries = /home/labbrat/github/flask_masque/samples/entries.csv
 
 [Database]
 db_user = labbrat
