change default user to vagrant

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [User]
-dump_path = /home/labbrat/dumps
-sample_entries = /home/labbrat/github/flask_masque/samples/entries.csv
+dump_path = /home/vagrant/dumps
+sample_entries = /home/vagrant/infra-forms/samples/entries.csv
 
 [Database]
-db_user = labbrat
+db_user = vagrant
 db_password = password
 db_address = 127.0.0.1
 db_port = 5433
