add scripts and Dockerfiles to launch the app and DB in Docker

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [User]
-dump_path = /home/vagrant/dumps
-sample_entries = /home/vagrant/infra-forms/samples/entries.csv
+dump_path = /app
+sample_entries = /app/samples/entries.csv
 
 [Database]
-db_user = vagrant
+db_user = boink
 db_password = password
-db_address = 127.0.0.1
-db_port = 5433
+db_address = masque_db
+db_port = 5432
 db_name = masq_forms
