--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,6 @@ sample_entries = /app/samples/entries.csv
 [Database]
 db_user = boink
 db_password = password
-db_address = masque_db
+db_address = flask_masque_masq_db_1
 db_port = 5432
 db_name = masq_forms
