add clusters db model and html page to add new cluster

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [User]
-dump_path = /app
-sample_entries = /app/samples/entries.csv
+dump_path = /home/labbrat/dumps
+sample_entries = /home/labbrat/github/flask_masque/samples/entries.csv
 
 [Database]
-db_user = boink
+db_user = labbrat
 db_password = password
-db_address = flask_masque_masq_db_1
-db_port = 5432
+db_address = 127.0.0.1
+db_port = 5433
 db_name = masq_forms
