expanded bash script that populates db

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,8 @@
 [User]
 dump_path = /home/labbrat/dumps
-sample_entries = /home/labbrat/github/flask_masque/samples/entries.csv
+form_entries = /home/labbrat/github/flask_masque/samples/form_entries.csv
+exip_entries = /home/labbrat/github/flask_masque/samples/exip_entries.csv
+cluster_entries = /home/labbrat/github/flask_masque/samples/cluster_entries.csv
 
 [Database]
 db_user = labbrat
