simplify config file and samles script

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,6 @@
 [User]
 dump_path = /home/labbrat/dumps
-form_entries = /home/labbrat/github/flask_masque/samples/form_entries.csv
-exip_entries = /home/labbrat/github/flask_masque/samples/exip_entries.csv
-cluster_entries = /home/labbrat/github/flask_masque/samples/cluster_entries.csv
+sample_path = /home/labbrat/github/flask_masque/samples
 
 [Database]
 db_user = labbrat
