change config address to match conainer address

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [User]
-dump_path = /home/labbrat/dumps
-sample_path = /home/labbrat/github/flask_masque/samples
+dump_path = /home/boink/dumps
+sample_path = /home/boink/flask_masque/samples
 
 [Database]
-db_user = labbrat
+db_user = boink
 db_password = password
-db_address = 127.0.0.1
-db_port = 5433
+db_address = flask_masque_masq_db_1
+db_port = 5432
 db_name = masq_forms
