--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,12 @@ services:
       - .:/app
     environment:
       FLASK_ENV: development
+      SQLALCHEMY_DATABASE_URI: "$DB_URI"
       
   masq_db:
     image: "postgres"
     environment:
-      POSTGRES_USER: boink
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: masq_forms
+      POSTGRES_USER: "$DB_USER"
+      POSTGRES_PORT: "$DB_PORT"
+      POSTGRES_PASSWORD: "$DB_PASS"
+      POSTGRES_DB: "$DB_NAME"
