--- a/Docker/requirements.txt
+++ b/Docker/requirements.txt
@@ -1,12 +1,21 @@
 alembic==1.8.1
+attrs==21.4.0
 click==8.1.3
 Flask==2.1.3
 Flask-Migrate==3.1.0
+flask-pytest==0.0.5
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.1
 MarkupSafe==2.1.1
+packaging==21.3
+pluggy==1.0.0
+py==1.11.0
+pyparsing==3.0.9
+pytest==7.1.2
 SQLAlchemy==1.4.39
+tomli==2.0.1
 Werkzeug==2.1.2
