--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 
 services:
   masq_db:
+    container_name: pg
     image: "postgres"
     environment:
       POSTGRES_USER: ${DB_USER}
@@ -11,6 +12,7 @@ services:
       POSTGRES_DB: ${DB_NAME}
 
   masq_app:
+    container_name: app
     build:
       context: .
       dockerfile: Docker/Dockerfile
