--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,7 @@ services:
     volumes:
       - .:/app
     environment:
-      FLASK_ENV: development
+      FLASK_DEBUG: 1
+      DB_PORT: ${DB_PORT}
       DB_URI: "postgresql://${DB_USER}:${DB_PASS}@${DB_ADDRESS}:${DB_PORT}/${DB_NAME}"
+
