--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: "3.9"
 
 services:
+  masq_nginx:
+    image: nginx
+    container_name: nginx
+    volumes:
+    - ./app_nginx.conf:/etc/nginx/conf.d/${DOMAIN_NAME}.conf
+    ports:
+    - "80:80"
+    environment:
+    - NGINX_PORT=80
+
   masq_db:
     container_name: pg
     image: "postgres"
@@ -27,4 +37,3 @@ services:
       FLASK_DEBUG: 1
       DB_PORT: ${DB_PORT}
       DB_URI: "postgresql://${DB_USER}:${DB_PASS}@${DB_ADDRESS}:${DB_PORT}/${DB_NAME}"
-
